fixed bg-size on small screens

--- a/styles/_background.scss
+++ b/styles/_background.scss
@@ -33,7 +33,7 @@ $bg-g-dp-t: rgba(19, 28, 106, 0.6);
             #{$bg-g-b-t}
         ), url("/assets/photos/faq-bg.jpeg");
         background-position: center;
-        background-size: auto;
+        background-size: auto 100%;
         background-repeat: no-repeat;
     }
 
